cmake_minimum_required(VERSION 3.1)

##
## PROJECT
## name and version
##
project(nadjieb_mjpeg_streamer VERSION 1.0.0 LANGUAGES CXX)

##
## DEPENDENCIES
##
##
find_package(Threads REQUIRED)

##
## OPTIONS
##
option(NADJIEB_MJPEG_STREAMER_Install "Install CMake targets during install step." ON)

##
## CONFIGURATION
##
include(GNUInstallDirs)

set(NADJIEB_MJPEG_STREAMER_TARGET_NAME                  ${PROJECT_NAME})
set(NADJIEB_MJPEG_STREAMER_CONFIG_INSTALL_DIR           "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}" CACHE INTERNAL "")
set(NADJIEB_MJPEG_STREAMER_INCLUDE_INSTALL_DIR          "${CMAKE_INSTALL_INCLUDEDIR}")
set(NADJIEB_MJPEG_STREAMER_TARGETS_EXPORT_NAME          "${PROJECT_NAME}Targets")
set(NADJIEB_MJPEG_STREAMER_CMAKE_CONFIG_TEMPLATE        "cmake/config.cmake.in")
set(NADJIEB_MJPEG_STREAMER_CMAKE_CONFIG_DIR             "${CMAKE_CURRENT_BINARY_DIR}")
set(NADJIEB_MJPEG_STREAMER_CMAKE_VERSION_CONFIG_FILE    "${NADJIEB_MJPEG_STREAMER_CMAKE_CONFIG_DIR}/${PROJECT_NAME}ConfigVersion.cmake")
set(NADJIEB_MJPEG_STREAMER_CMAKE_PROJECT_CONFIG_FILE    "${NADJIEB_MJPEG_STREAMER_CMAKE_CONFIG_DIR}/${PROJECT_NAME}Config.cmake")
set(NADJIEB_MJPEG_STREAMER_CMAKE_PROJECT_TARGETS_FILE   "${NADJIEB_MJPEG_STREAMER_CMAKE_CONFIG_DIR}/${PROJECT_NAME}Targets.cmake")
set(NADJIEB_MJPEG_STREAMER_INCLUDE_BUILD_DIR            "${PROJECT_SOURCE_DIR}/include/")

##
## TARGET
## create target and add include path
##
add_library(${NADJIEB_MJPEG_STREAMER_TARGET_NAME} INTERFACE)
add_library(${PROJECT_NAME}::${NADJIEB_MJPEG_STREAMER_TARGET_NAME} ALIAS ${NADJIEB_MJPEG_STREAMER_TARGET_NAME})
if (${CMAKE_VERSION} VERSION_LESS "3.8.0")
    target_compile_features(${NADJIEB_MJPEG_STREAMER_TARGET_NAME} INTERFACE cxx_range_for)
else()
    target_compile_features(${NADJIEB_MJPEG_STREAMER_TARGET_NAME} INTERFACE cxx_std_11)
endif()

target_include_directories(
    ${NADJIEB_MJPEG_STREAMER_TARGET_NAME}
    INTERFACE
    $<BUILD_INTERFACE:${NADJIEB_MJPEG_STREAMER_INCLUDE_BUILD_DIR}>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(
    ${NADJIEB_MJPEG_STREAMER_TARGET_NAME}
    INTERFACE
    Threads::Threads
)

##
## INSTALL
## install header files, generate and install cmake config files for find_package()
##
include(CMakePackageConfigHelpers)
write_basic_package_version_file(
    ${NADJIEB_MJPEG_STREAMER_CMAKE_VERSION_CONFIG_FILE} COMPATIBILITY SameMajorVersion
)
configure_file(
    ${NADJIEB_MJPEG_STREAMER_CMAKE_CONFIG_TEMPLATE}
    ${NADJIEB_MJPEG_STREAMER_CMAKE_PROJECT_CONFIG_FILE}
    @ONLY
)

if(NADJIEB_MJPEG_STREAMER_Install)
    install(
        DIRECTORY ${NADJIEB_MJPEG_STREAMER_INCLUDE_BUILD_DIR}
        DESTINATION ${NADJIEB_MJPEG_STREAMER_INCLUDE_INSTALL_DIR}
    )
    install(
        FILES ${NADJIEB_MJPEG_STREAMER_CMAKE_PROJECT_CONFIG_FILE} ${NADJIEB_MJPEG_STREAMER_CMAKE_VERSION_CONFIG_FILE}
        DESTINATION ${NADJIEB_MJPEG_STREAMER_CONFIG_INSTALL_DIR}
    )
    export(
        TARGETS ${NADJIEB_MJPEG_STREAMER_TARGET_NAME}
        NAMESPACE ${PROJECT_NAME}::
        FILE ${NADJIEB_MJPEG_STREAMER_CMAKE_PROJECT_TARGETS_FILE}
    )
    install(
        TARGETS ${NADJIEB_MJPEG_STREAMER_TARGET_NAME}
        EXPORT ${NADJIEB_MJPEG_STREAMER_TARGETS_EXPORT_NAME}
        INCLUDES DESTINATION ${NADJIEB_MJPEG_STREAMER_INCLUDE_INSTALL_DIR}
    )
    install(
        EXPORT ${NADJIEB_MJPEG_STREAMER_TARGETS_EXPORT_NAME}
        NAMESPACE ${PROJECT_NAME}::
        DESTINATION ${NADJIEB_MJPEG_STREAMER_CONFIG_INSTALL_DIR}
    )
endif()
